tests/error/tracing_errors/no_return.err
Error: Type mismatch (at $FILE:8:0)
  | 
6 | 
7 | @guppy.comptime(module)
8 | def test() -> int:
  | ^^^^^^^^^^^^^^^^^^
9 |     pass
  | ^^^^^^^^ Expected return value of type `int`, got `None`

Guppy compilation failed due to 1 previous error
